# semcode

./: CLAUDE.md  Cargo.toml  clippy.toml
benches/: collection_operations.rs  core_operations.rs  database_operations.rs  io_operations.rs  treesitter_parsing.rs
docs/: schema.md
src/: callchain.rs  collection_utils.rs  consts.rs  diffdump.rs  git.rs  hash.rs  lib.rs  pages.rs  perf_monitor.rs  pipeline.rs  search.rs  symbol_walkback.rs  treesitter_analyzer.rs  types.rs
src/database/: batch_processing.rs  connection.rs  content.rs  functions.rs  mod.rs  processed_files.rs  schema.rs  search.rs  sql_utils.rs  symbol_filename.rs  types.rs  vectors.rs
tools/: README.md  analyze_kernel_stats.py
