# SPDX-License-Identifier: MIT OR Apache-2.0
cargo-features = ["profile-rustflags"]  # Not needed past Rust 1.80 stable, kept for compatibility

[package]
name = "semcode"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lancedb = "0.22"
arrow = "56.2"
arrow-array = "56.2"
arrow-schema = "56.2"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
indicatif = "0.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "17.0"
colored = "3.0"
futures = "0.3.31"
ndarray = "0.16"
regex = "1.11"
rayon = "1.10"
dirs = "5.0"
num_cpus = "1.16"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
streaming-iterator = "0.1"
once_cell = "1.20"
crossbeam-channel = "0.5"
sha1 = "0.10"
blake3 = "1.8.2"
hex = "0.4"
dashmap = "6.1"
tempfile = "3.14"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tokio-tungstenite = "0.24"
anstream = "0.6"        # Auto TTY/NO_COLOR handling; print!/println! and Write adapters [web:17]
owo-colors = { version = "4", features = ["supports-colors"] }  # .red().bold(), optional detection helpers [web:27]
gix = "0.73"
model2vec-rs = "0.1.4"
tower-lsp = "0.20"      # Language Server Protocol framework for LSP server
url = "2.5"             # URL parsing for file URIs in LSP
similar = { version = "2.7", features = ["text"] }  # Proper diff algorithm for commit diffs
shlex = "1.3"           # Shell-like parsing for quoted strings in CLI
gxhash = {version = "3.4", features =["deterministic"]}          # Fast HashMap/HashSet with SIMD acceleration
mimalloc = "0.1"        # Fast allocator (10-20% faster than system malloc, works on Linux and macOS)

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "core_operations"
harness = false

[[bench]]
name = "treesitter_parsing"
harness = false

[[bench]]
name = "database_operations"
harness = false

[[bench]]
name = "io_operations"
harness = false

[[bin]]
name = "semcode-index"
path = "src/bin/index.rs"

[[bin]]
name = "semcode"
path = "src/bin/query.rs"

[[bin]]
name = "semcode-mcp"
path = "src/bin/semcode-mcp.rs"

[[bin]]
name = "semcode-lsp"
path = "src/bin/semcode-lsp.rs"

[profile.dev]
rustflags = [
  "-C", "target-cpu=native",             # tune for your CPU; enables all supported instructions (required for gxhash)
]

[profile.release]
debug = false          # no debug
opt-level = 3          # max performance (O3)
# painfully slow, but better.
# lto = "fat"            # full link-time optimization across crates
# codegen-units = 1      # single codegen unit for better optimization
# incremental = false    # always fully optimize
# not as good, but tolerable build times.
lto = "thin"
incremental = true     # implicitly set codegen units to 256
#
panic = "abort"        # remove unwinding runtime
strip = "symbols"      # remove debug symbols
overflow-checks = false # no runtime overflow checks
rpath = false          # omit runtime search paths
rustflags = [
  "-C", "target-cpu=native",             # tune for your CPU; enables all supported instructions
]
